deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workany
  labels:
    name: workany
